--- a/.gitignore
+++ b/.gitignore
@@ -50,8 +50,12 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-analyze
-file
 
 # VSCode
 .vscode
+
+# my own
+analyze
+file
+.temp
+output
